--- a/pages/aircraft.html
+++ b/pages/aircraft.html
@@ -26,6 +26,11 @@
 		<a href="controls.html"><div class="navbutton"><div>Controls</div></div></a>
 		<a href="graphics.html"><div class="navbutton"><div>Graphics</div></div></a>
 	</div>
+	<div class="section">
+		<div class="section_header">SETTINGS</div>
+
+	</div>
+
 	
 	<div id="launch_bar">
 		<div id="launch_button">LAUNCH</div>
