--- a/pages/splash.html
+++ b/pages/splash.html
@@ -16,9 +16,9 @@
     <link href="./../css/main.css" rel="stylesheet">	
     <link href="./../css/splash.css" rel="stylesheet">	
 	<link rel="icon" type="image/x-icon" href="images/favicon.png">
-    <title>FS3D Launcher</title>
   </head>
   <body>
-
+	<div id="splash_loading"></div>
+	<div id="splash_message">Loading FS3D Launcher</div>
   </body>
 </html>
