--- a/pages/scenario.html
+++ b/pages/scenario.html
@@ -33,6 +33,8 @@
 	
 		<div class="section">
 			<div class="section_header">SERVER</div>
+			<label for="server_status" class="field_label">Server Status:</label>
+			<div id="server_status"></div>
 			<label for="server" class="field_label">Choose Server</label>
 			<select id="server" class="dropdown input_enabled">
 				<option selected>Please Select A Server</option>
