--- a/pages/aircraft.html
+++ b/pages/aircraft.html
@@ -32,12 +32,19 @@
 		</div>
 		<div id="aircraft_left" class="section">
 			<div class="section_header">Lockheed Martin C-130H</div>
-		
+			<div id="aircraft_graphic">test
+			</div>
 		</div>
 
 		<div id="aircraft_right" class="section">
-			test
-		
+			<div class="section_header">Change Fuel</div>
+			<div id="aircraft_fuel">
+			
+			</div>
+			<div class="section_header">Change Payload</div>
+			<div id="aircraft_payload">
+			
+			</div>
 		</div>	
 		<div id="launch_bar">
 			<div id="launch_button">LAUNCH</div>
