--- a/pages/scenario.html
+++ b/pages/scenario.html
@@ -29,6 +29,7 @@
 			<a href="aircraft.html"><div class="navbutton"><div>Aircraft</div></div></a>
 			<a href="controls.html"><div class="navbutton"><div>Controls</div></div></a>
 			<a href="graphics.html"><div class="navbutton"><div>Graphics</div></div></a>
+			<a href="comms.html"><div class="navbutton"><div>Comms</div></div></a>
 		</div>
 	
 		<div class="section">
