--- a/pages/aircraft.html
+++ b/pages/aircraft.html
@@ -29,6 +29,7 @@
 			<a href="aircraft.html"><div class="navbutton nb_selected"><div>Aircraft</div></div></a>
 			<a href="controls.html"><div class="navbutton"><div>Controls</div></div></a>
 			<a href="graphics.html"><div class="navbutton"><div>Graphics</div></div></a>
+			<a href="comms.html"><div class="navbutton"><div>Comms</div></div></a>
 		</div>
 		<div id="aircraft_left" class="section">
 			<div class="section_header">Lockheed Martin C-130H</div>
