--- a/pages/comms.html
+++ b/pages/comms.html
@@ -21,10 +21,11 @@
   <body>
     <div id="header"></div>
 	<div id="navigation">
-		<a href="scenario.html"><div class="navbutton"><div>Scenario</div></div></a>
-		<a href="aircraft.html"><div class="navbutton"><div>Aircraft</div></div></a>
-		<a href="controls.html"><div class="navbutton"><div>Controls</div></div></a>
-		<a href="graphics.html"><div class="navbutton nb_selected"><div>Graphics</div></div></a>
+			<a href="scenario.html"><div class="navbutton"><div>Scenario</div></div></a>
+			<a href="aircraft.html"><div class="navbutton"><div>Aircraft</div></div></a>
+			<a href="controls.html"><div class="navbutton"><div>Controls</div></div></a>
+			<a href="graphics.html"><div class="navbutton"><div>Graphics</div></div></a>
+			<a href="comms.html"><div class="navbutton nb_selected"><div>Comms</div></div></a>
 	</div>
 	
 	<div id="launch_bar">
