--- a/pages/graphics.html
+++ b/pages/graphics.html
@@ -25,6 +25,7 @@
 		<a href="aircraft.html"><div class="navbutton"><div>Aircraft</div></div></a>
 		<a href="controls.html"><div class="navbutton"><div>Controls</div></div></a>
 		<a href="graphics.html"><div class="navbutton nb_selected"><div>Graphics</div></div></a>
+		<a href="comms.html"><div class="navbutton"><div>Comms</div></div></a>
 	</div>
 	
 	<div id="launch_bar">
