--- a/pages/splash.html
+++ b/pages/splash.html
@@ -18,6 +18,9 @@
 	<link rel="icon" type="image/x-icon" href="images/favicon.png">
   </head>
   <body>
+    <video id="splash_video" width="560" autoplay loop>
+        <source src="./../videos/splash.mp4" type="video/mp4" />
+    </video>
 	<div id="splash_loading"></div>
 	<div id="splash_message">Loading FS3D Launcher</div>
   </body>
