--- a/pages/controls.html
+++ b/pages/controls.html
@@ -161,6 +161,6 @@
 	</div>
 
     <!-- You can also require other files to run in this process -->
-    <script src="./../renderer.js"></script>
+    <script src="./../js/controls.js"></script>
   </body>
 </html>
